# Period

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  bench_iter.period  build.py  compiler.py  pyproject.toml  registry.json  requirements.txt  setup.py
.github/scripts/: run_examples.sh  run_paths.sh  run_tests.py
.github/workflows/: ci.yml  examples.yml  release.yml
assets/: generate_icon.py
docs/: about.html  animations.js  benchmark_long.py  bubble-menu.js  copy-code.js  docs.html  download.html  examples.html  finish_install.html  index-animations.js  index.html  install.html  style.css
examples/: class.period  data.period  errors.period  hello.period  import.period  multi_errors.period  primes.period  runtime_error.period  typed.period
installer/: period.iss
period/: Cargo.toml  __init__.py  ast_nodes.py  errors.py  interpreter.py  lexer.py  lsp_server.py  module_loader.py  parser.py  py_backend.py  semantic.py  vm.py  wrapper.c
period-rs/: Cargo.toml
period-rs/src/: compiler.rs  interpreter.rs  main.rs  parser.rs
period/src/: ast.rs  builtins.rs  bytecode.rs  c_backend.rs  compiler.rs  inline.rs  interpreter.rs  jit.rs  jit_generic.rs  jit_runtime.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  repl.rs  reporting.rs  semantic.rs  type_checker.rs  value.rs  vm.rs
period/src/package_manager/: downloader.rs  lockfile.rs  manifest.rs  mod.rs  publisher.rs  registry.rs  resolver.rs
period/stdlib/: __init__.py  io.py  list.period  math.period  math.periodi  math.py  random.period  random.periodi  string.period  string.periodi  system.periodi  time.period  time.periodi
scripts/: build_dist.py
sphinx-docs/: Makefile
sphinx-docs/source/: api.rst  builtin.rst  conf.py  index.rst  syntax.rst  tools.rst
stdlib/: list.period  system.periodi
vscode-extension/: .vscodeignore  README.md  extension.js  language-configuration.json  package-lock.json  package.json  test-grammar.js
vscode-extension/syntaxes/: period.tmLanguage.json
vscode-extension/tests/: interpolation.period
