[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "period-lang"
version = "0.0.1"
description = "Period - an elegant English programming language ending every statement with a period."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
period = "compiler:main"
