[package]
name = "period-rs"
version = "1.0.6"
edition = "2024"
build = "build.rs"

[[bin]]
name = "period"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
libloading = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
