[package]
name = "period-rs"
version = "2.0.0-beta.3"
edition = "2024"
build = "build.rs"

[[bin]]
name = "period"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["tls", "native-certs"] }
url = "2"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
